styles/site.css
@font-face {
    font-display: swap;
    font-family: "EB Garamond";
    font-style: normal;
    font-weight: 400;
    src: url('../fonts/eb-garamond-v26-latin-regular.woff2') format('woff2');
    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

:root {
    --primary-color: #811112;
    --secondary-color: #AC3834;
    --accent-color: #CAB7A1;
    --contrast-color: #B29576;
    --paragraph-color: #3A3B3C;
}

h1,
h2,
h3,
a,
p,
.nav-divider {
    font-family: "EB Garamond", serif;
}

nav {
    padding: 10px 15px;
}

h1 {
    color: var(--primary-color);
    font-weight: 800;
    font-size: 60px;
    text-align: center;
    margin-bottom: 30px;
}

h2 {
    color: var(--secondary-color);
    font-size: 22px;
}

h3 {
    font-weight: 600;
    font-size: 22px;
}

p {
    font-size: 20px;
}

a {
    color: black;
    text-decoration: underline;
}

img {
    max-width: 100%;
}

main {
    margin: 75px auto;
    width: min(700px, 90vw);
    display: flex;
    flex-direction: column;
}

hr {
    height: 10px;
    border-width: 2px;
    border-color: black;
    border-style: solid;
}

.intro {
    height: 100vh;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.intro img {
    width: min(500px, 80%);
}

.intro h1,
h2 {
    line-height: 1;
}

.intro nav {
    margin-top: 10px;
}

body>nav {
    background-color: var(--accent-color);
}

article p+p {
    margin-top: 20px;
}

